<?xml version="1.0"?>
<package format="2">
  <name>yzhou</name>
  <version>0.1.0</version>
  <description>Use different buttom to control the turtle </description>


  <maintainer email="1620404337@qq.com">Yuchong</maintainer> 



 <license>BSD</license>
 <author email="you@yourdomain.tld">Jane Doe</author>





 <buildtool_depend>catkin</buildtool_depend>

 <build_depend>roscpp</build_depend>
 <build_depend>rospy</build_depend>
 <build_depend>std_msgs</build_depend>
 <build_depend>message_generation</build_depend>
 <exec_depend>message_runtime</exec_depend>
 <exec_depend>roscpp</exec_depend>
 <exec_depend>rospy</exec_depend>
 <exec_depend>std_msgs</exec_depend>

 
 </package>
